# flutter_onnx_sample

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/vectorize/: MainActivity.kt
assets/data/: catalog.dummy.500.json  catalog.sample.json  search_index.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bert_wordpiece_tokenizer.dart  cosine_search.dart  main.dart  search_index.dart  vectorizer_service.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
tools/: build_index.py  main.py  pyproject.toml
