[project]
name = "vectorize-tools"
version = "0.1.0"
description = "HuggingFace embedding models to ONNX exporter"
requires-python = ">=3.13"
dependencies = [
    "onnx>=1.20.1",
    "onnxruntime>=1.24.2",
    "onnxscript>=0.6.2",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]

[project.scripts]
export-model = "main:main"
build-index = "build_index:main"
